--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,20 @@
 * {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
+
+.blur {
+  filter: blur(4px);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2300px;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
