making the posts editable - no db changes*

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 * {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
-
 .blur {
   filter: blur(4px);
 }
